fix gap

--- a/style.css
+++ b/style.css
@@ -101,3 +101,9 @@ footer {
 footer img {
   width: 32px;
 }
+
+section {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
